# ai-commander

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INCREMENTAL_SUMMARIES.md  INCREMENTAL_SUMMARIES_QUICK_REFERENCE.md  Makefile  OPTION_SELECTION_IMPLEMENTATION.md  QA_EXECUTIVE_SUMMARY.md  QA_FINAL_REPORT.md  QA_TESTING_REPORT.md  README.md  SECURITY_VERIFICATION_REPORT_2026-02-20.md  VERIFICATION_CHECKLIST.md  WORKTREE_IMPLEMENTATION.md  ai  build  daemon  mypy.ini  pair  pyproject.toml
.ai-trackdown/: config.yaml  project.yaml
.claude-mpm/: PM_INSTRUCTIONS.md  configuration.yaml  pm_skills_registry.yaml
commander-rs/: Cargo.toml
commander-rs/crates/commander-cli/: Cargo.toml
commander-rs/crates/commander-cli/src/: cli.rs  commands.rs  lib.rs  main.rs  repl.rs
commander-rs/crates/commander-models/: Cargo.toml
commander-rs/crates/commander-models/src/: work.rs
crates/ai-commander/: Cargo.toml  build.rs
crates/ai-commander/src/: agent_cli.rs  cli.rs  commands.rs  daemon_commands.rs  filesystem.rs  lib.rs  main.rs  repl.rs
crates/ai-commander/src/tui/: agents.rs  app.rs  commands.rs  completion.rs  connection.rs  events.rs  git.rs  helpers.rs  input.rs  inspect.rs  messaging.rs  mod.rs  options.rs  scroll.rs  sessions.rs  ui.rs
crates/commander-adapters/: Cargo.toml
crates/commander-adapters/src/: auggie.rs  claude_code.rs  codex.rs  event_driven.rs  lib.rs  mpm.rs  mpm_sdk.rs  patterns.rs  registry.rs  shell.rs
crates/commander-agent/: Cargo.toml
crates/commander-agent/src/: agent.rs  client.rs  compaction.rs  completion_driver.rs  config.rs  context.rs  context_manager.rs  error.rs  eval.rs  lib.rs  response.rs  session_agent.rs  template.rs  tool.rs  user_agent.rs
crates/commander-agent/src/eval/: detector.rs  improvement.rs  mod.rs  store.rs  tests.rs  types.rs
crates/commander-agent/src/session_agent/: analysis.rs  context.rs  mod.rs  state.rs  tests.rs  tools.rs
crates/commander-agent/src/template/: adapter_type.rs  mod.rs  prompts.rs  tests.rs  tools.rs
crates/commander-agent/src/user_agent/: autonomous.rs  blockers.rs  mod.rs  tests.rs  tools.rs
crates/commander-api/: Cargo.toml
crates/commander-api/src/: config.rs  error.rs  lib.rs  router.rs  state.rs  web_clients.rs
crates/commander-api/src/handlers/: adapters.rs  auth.rs  events.rs  health.rs  mod.rs  projects.rs  web.rs  work.rs
crates/commander-api/src/types/: mod.rs  requests.rs  responses.rs
crates/commander-cli/: Cargo.toml  build.rs
crates/commander-cli/src/: chat.rs  cli.rs  commands.rs  lib.rs  main.rs  repl.rs
crates/commander-cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
crates/commander-core/: Cargo.toml
crates/commander-core/src/: change_detector.rs  client_adapter.rs  config.rs  lib.rs  log.rs  migration.rs  notification_parser.rs  ollama.rs  onboarding.rs  options.rs  output_filter.rs  structured_summarizer.rs  summarizer.rs  usage.rs
crates/commander-core/src/change_detector/: mod.rs  patterns.rs  tests.rs  types.rs
crates/commander-daemon/: Cargo.toml  README.md
crates/commander-daemon/src/: error.rs  health.rs  idle_tracker.rs  lib.rs  main.rs  message_poller.rs  monitoring.rs  pairing.rs  service.rs  sessions.rs
crates/commander-daemon/src/ipc/: mod.rs  protocol.rs  server.rs  unix.rs  windows.rs
crates/commander-events/: Cargo.toml
crates/commander-events/src/: error.rs  filter.rs  lib.rs  manager.rs
crates/commander-gui/: Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PHASE2_COMPLETE.md  PHASE2_DELIVERY.md  QUICKSTART.md  README.md  VERIFICATION.md  tauri.conf.json
crates/commander-gui/icons/: icon.icns
crates/commander-gui/src/: commands.rs  events.rs  main.rs  state.rs
crates/commander-gui/ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  verify-setup.sh  vite.web.config.ts  web.html
crates/commander-gui/ui/src/: App.svelte  WebApp.svelte  app.css  web-main.ts
crates/commander-gui/ui/src/lib/: tauri-event-shim.ts  tauri-shim.ts  transport.ts
crates/commander-gui/ui/src/lib/components/: BotStatus.svelte  ChatView.svelte  CommandPalette.svelte  CreateSessionModal.svelte  DashboardView.svelte  InputArea.svelte  MonitorView.svelte  ProcessMonitorPanel.svelte  SessionList.svelte  SettingsModal.svelte  ThemeToggle.svelte
crates/commander-gui/ui/src/lib/stores/: app.ts  theme.ts
crates/commander-memory/: Cargo.toml
crates/commander-memory/src/: embedding.rs  error.rs  lib.rs  local.rs  memory.rs  qdrant.rs  store.rs
crates/commander-orchestrator/: Cargo.toml
crates/commander-orchestrator/src/: error.rs  lib.rs  orchestrator.rs
crates/commander-persistence/: Cargo.toml
crates/commander-persistence/src/: atomic.rs  event_store.rs  state_store.rs  work_store.rs
crates/commander-persistence/tests/: alias_integration.rs
crates/commander-runtime/: Cargo.toml
crates/commander-runtime/src/: config.rs  error.rs  event.rs  executor.rs  lib.rs  poller.rs  runtime.rs
crates/commander-telegram/: Cargo.toml
crates/commander-telegram/src/: bot.rs  daemon.rs  error.rs  event_consumer.rs  features.rs  handlers.rs  ipc_client.rs  lib.rs  main.rs  ngrok.rs  notifications.rs  pairing.rs  session.rs  session_log.rs  state.rs  typing_throttle.rs  version.rs
crates/commander-telegram/tests/: rebuild_detection_test.rs
crates/commander-tmux/: Cargo.toml
crates/commander-tmux/src/: error.rs  lib.rs  orchestrator.rs  session.rs
crates/commander-work/: Cargo.toml
crates/commander-work/src/: error.rs  filter.rs  lib.rs  queue.rs
crates/mpm-sdk/: Cargo.toml
crates/mpm-sdk/src/: client.rs  http_client.rs  lib.rs  parser.rs  serve_client.rs  serve_manager.rs  types.rs
docs/: BUILD.md  GUI.md  LOCAL_DEPLOYMENT.md  QUICKSTART.md  ROADMAP.md  SHORTCUTS.md  autocomplete-enhancements.md  gui-changes-summary.md  gui-slash-commands-demo.md  implementation-summary-progress-messages.md
scripts/: dev.sh  health-check.sh  install-local.sh  install-user.sh  (+7 more)
(+154 files in other folders)
