[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Commander Team"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tempfile = "3.10"
regex = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
rustyline = "14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
shellexpand = "3.1"
dotenvy = "0.15"
ratatui = "0.29"
crossterm = "0.28"
teloxide = { version = "0.13", features = ["webhooks-axum", "macros"] }
futures = "0.3"
url = "2.5"
which = "7"
