[package]
name = "ai-commander"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-interface AI session manager - TUI, REPL, and Telegram"

[[bin]]
name = "ai-commander"
path = "src/main.rs"

[dependencies]
commander-models = { path = "../commander-models" }
commander-persistence = { path = "../commander-persistence" }
commander-adapters = { path = "../commander-adapters" }
commander-tmux = { path = "../commander-tmux" }
commander-telegram = { path = "../commander-telegram" }
commander-core = { path = "../commander-core" }
commander-memory = { path = "../commander-memory" }
commander-agent = { path = "../commander-agent" }
serde = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
shellexpand = { workspace = true }
dotenvy = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
which = { workspace = true }
regex = { workspace = true }
signal-hook = { workspace = true }

# Optional dependencies (must be in [dependencies] section)
commander-orchestrator = { path = "../commander-orchestrator", optional = true }

[build-dependencies]
chrono = { workspace = true }

[features]
default = []
agents = ["commander-orchestrator"]

[dev-dependencies]
tempfile = { workspace = true }
