[package]
name = "commander-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime adapters for AI coding tools (Claude Code, Aider, etc.)"

[dependencies]
commander-models = { path = "../commander-models" }
regex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
