[package]
name = "commander-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent trait and types for AI Commander multi-agent system"

[dependencies]
commander-core = { path = "../commander-core" }
commander-memory = { path = "../commander-memory" }
async-trait = "0.1"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
