[package]
name = "commander-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core business logic for Commander"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
