[package]
name = "commander-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Central daemon service for ai-commander session management"

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = { workspace = true }
which = "7.0"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Commander crates
commander-core = { path = "../commander-core" }
commander-orchestrator = { path = "../commander-orchestrator" }
commander-memory = { path = "../commander-memory" }

# Optional dependencies for enhanced monitoring
psutil = { version = "3.2", optional = true }

[features]
default = []
psutil = ["dep:psutil"]

[[bin]]
name = "commander-daemon"
path = "src/main.rs"
