[package]
name = "commander-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Local crates
commander-models = { path = "../commander-models" }
commander-persistence = { path = "../commander-persistence" }
commander-tmux = { path = "../commander-tmux" }
commander-core = { path = "../commander-core" }
commander-telegram = { path = "../commander-telegram" }
commander-adapters = { path = "../commander-adapters" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
