[package]
name = "commander-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Local crates
commander-models = { path = "../commander-models" }
commander-persistence = { path = "../commander-persistence" }
commander-tmux = { path = "../commander-tmux" }
commander-core = { path = "../commander-core" }
commander-telegram = { path = "../commander-telegram" }
commander-adapters = { path = "../commander-adapters" }
commander-api = { path = "../commander-api" }
commander-daemon = { path = "../commander-daemon" }
commander-events = { path = "../commander-events" }
commander-work = { path = "../commander-work" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
