[package]
name = "commander-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Async runtime for Commander"

[dependencies]
commander-models = { path = "../commander-models" }
commander-adapters = { path = "../commander-adapters" }
commander-tmux = { path = "../commander-tmux" }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
