[package]
name = "commander-work"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Priority-based work queue with dependency tracking for Commander"

[dependencies]
commander-models = { path = "../commander-models" }
commander-persistence = { path = "../commander-persistence" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
