[package]
name = "mpm-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless SDK for spawning and managing Claude MPM agents"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
commander-core = { path = "../commander-core" }

[dev-dependencies]
tempfile = { workspace = true }
