[package]
name = "commander-models"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core data models for Commander"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
